# tyd

./: .gitmodules  .travis.yml  CMakeLists.txt  install-cmake.sh
src/: CMakeLists.txt
src/cli/: CMakeLists.txt  main.cpp
src/daemon/: CMakeLists.txt  main.cpp
src/tyd/: CMakeLists.txt
src/tyd/managers/: tasks_manager.cpp  tasks_manager.hpp
src/tyd/models/: task.cpp  task.hpp  task_record.cpp  task_record.hpp
test/: CMakeLists.txt  task_models_test_suite.cpp  task_record_models_test_suite.cpp  tasks_manager_test_suite.cpp
