SET(PROJECT_NAME "tyd")

#SET(CMAKE_C_COMPILER "clang-3.9")
#SET(CMAKE_CXX_COMPILER "clang++-3.9")

PROJECT(${PROJECT_NAME})

MESSAGE("-- Project name: ${PROJECT_NAME}")

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(CMAKE_EXPORT_COMPILE_COMMANDS "ON")
SET(
    CMAKE_MODULE_PATH
    ${CMAKE_MODULE_PATH}
    "${CMAKE_SOURCE_DIR}/.cmake/modules/"
  )

ADD_DEFINITIONS(-Wall)
ADD_DEFINITIONS(-Wextra)
ADD_DEFINITIONS(-Werror)
ADD_DEFINITIONS(-std=c++1z)

SET(PROJECT_EXTRA_DIR ${CMAKE_SOURCE_DIR}/extra/)

SET(PROJECT_LIB_NAME ${PROJECT_NAME})
SET(PROJECT_BIN ${PROJECT_NAME}-daemon)
SET(PROJECT_CLI ${PROJECT_NAME}-cli)

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(test)
