SET(PROJECT_CLI_SOURCE_DIR "${CMAKE_SOURCE_DIR}/src/cli")

ADD_EXECUTABLE(
    ${PROJECT_CLI}
    ${PROJECT_CLI_SOURCE_DIR}/main.cpp
  )

TARGET_LINK_LIBRARIES(
    ${PROJECT_CLI}
    ${CMAKE_THREAD_LIBS_INIT}
    LINK_PUBLIC
    ${PROJECT_LIB_NAME}
  )

INSTALL(TARGETS ${PROJECT_CLI} DESTINATION ${CMAKE_BINARY_DIR})
