SET(PROJECT_CLI_SOURCE_DIR "${CMAKE_SOURCE_DIR}/src/cli")

ADD_SUBDIRECTORY(
    ${CMAKE_SOURCE_DIR}/extra/backward-cpp
    ${CMAKE_CURRENT_BINARY_DIR}/extra/backward-cpp
  )

INCLUDE_DIRECTORIES(${PROJECT_EXTRA_DIR})

ADD_EXECUTABLE(
    ${PROJECT_CLI}
    ${PROJECT_CLI_SOURCE_DIR}/main.cpp
    ${BACKWARD_ENABLE}
  )

TARGET_LINK_LIBRARIES(
    ${PROJECT_CLI}
    ${CMAKE_THREAD_LIBS_INIT}
    LINK_PUBLIC
    ${PROJECT_LIB_NAME}
  )

ADD_BACKWARD(${PROJECT_CLI})

INSTALL(TARGETS ${PROJECT_CLI} DESTINATION ${CMAKE_BINARY_DIR})
