SET(PROJECT_BIN_SOURCE_DIR "${CMAKE_SOURCE_DIR}/src/daemon")

ADD_EXECUTABLE(
    ${PROJECT_BIN}
    ${PROJECT_BIN_SOURCE_DIR}/main.cpp
  )

TARGET_LINK_LIBRARIES(
    ${PROJECT_BIN}
    ${CMAKE_THREAD_LIBS_INIT}
    LINK_PUBLIC
    ${PROJECT_LIB_NAME}
  )

INSTALL(TARGETS ${PROJECT_BIN} DESTINATION ${CMAKE_BINARY_DIR})
