SET(PROJECT_LIB_SRCS
  ${CMAKE_CURRENT_SOURCE_DIR}/models/task.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/models/task_record.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/managers/tasks_manager.cpp
  )

ADD_LIBRARY(${PROJECT_LIB_NAME} ${PROJECT_LIB_SRCS})

TARGET_INCLUDE_DIRECTORIES(
  ${PROJECT_LIB_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}
  )
